@@ -1,4 +1,7 @@
-copy "Data Files\readme.txt" "debug\readme.txt"
+copy "Data Files\blocked_nations.txt" "debug\blocked_nations.txt"
 copy "Data Files\changelog.txt" "debug\changelog.txt"
 copy "Data Files\configuration.txt" "debug\configuration.txt"
+copy "Data Files\country_mappings.txt" "debug\country_mappings.txt"
+copy "Data Files\culture_mappings.txt" "debug\culture_mappings.txt"
 copy "Data Files\province_mappings.txt" "debug\province_mappings.txt"
+copy "Data Files\readme.txt" "debug\readme.txt"
