@@ -1,4 +1,7 @@
-copy "Data Files\readme.txt" "release\readme.txt"
+copy "Data Files\blocked_nations.txt" "release\blocked_nations.txt"
 copy "Data Files\changelog.txt" "release\changelog.txt"
 copy "Data Files\configuration.txt" "release\configuration.txt"
+copy "Data Files\country_mappings.txt" "release\country_mappings.txt"
+copy "Data Files\culture_mappings.txt" "release\culture_mappings.txt"
 copy "Data Files\province_mappings.txt" "release\province_mappings.txt"
+copy "Data Files\readme.txt" "release\readme.txt"
